name: Bowling
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: Bowling kata in Haskell
description: Bowling kata in Haskell - vehicle for learning Haskell, HUnit, QuickCheck, Leksah
data-dir: ""
 
executable Bowling
    build-depends: HUnit -any, QuickCheck -any, base -any, random -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: .
 
test-suite Bowling_Property_Tests
    build-depends: HUnit -any, QuickCheck -any, base -any, random -any
    type: exitcode-stdio-1.0
    main-is: PropertyTests.hs
    buildable: True
    hs-source-dirs: .
test-suite Bowling_Unit_Tests
    build-depends: HUnit -any, QuickCheck -any, base -any, random -any
    type: exitcode-stdio-1.0
    main-is: UnitTests.hs
    buildable: True
    hs-source-dirs: .